--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-cssnano": "^2.1.0",
     "gulp-imagemin": "^2.4.0",
     "gulp-newer": "^1.1.0",
+    "gulp-notify": "^2.2.0",
     "gulp-postcss": "^6.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
@@ -42,6 +43,7 @@
     "imagemin-pngquant": "^4.2.0",
     "postcss-cssnext": "^2.4.0",
     "postcss-import": "^8.0.2",
+    "postcss-inline-comment": "^2.0.0",
     "postcss-nested": "^1.0.0",
     "postcss-pxtorem": "^3.3.1",
     "postcss-reporter": "^1.3.0",
